force-app/main/default/objects/Sensitive_Contact__c/Sensitive_Contact__c.object-meta.xml
<CustomObject>
    <label>Sensitive Contact</label>
    <nameField>
        <label>Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sensitive Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>