force-app/main/default/objects/Sensitive_Contact__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sensitive Contacts</relationshipLabel>
    <relationshipName>Sensitive_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>