force-app/main/default/objects/Sensitive_Contact__c/fields/Assistant__c.field-meta.xml
<CustomField>
    <fullName>Assistant__c</fullName>
    <label>Assistant</label>
    <length>40</length>
    <type>Text</type>
</CustomField>