force-app/main/default/objects/Sensitive_Contact__c/fields/Asst_Phone__c.field-meta.xml
<CustomField>
    <fullName>Asst_Phone__c</fullName>
    <label>Asst. Phone</label>
    <type>Phone</type>
</CustomField>