force-app/main/default/objects/Sensitive_Contact__c/fields/Client_Code__c.field-meta.xml
<CustomField>
    <fullName>Client_Code__c</fullName>
    <label>Client Code</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ATT</fullName>
            </value>
            <value>
                <fullName>DISH</fullName>
            </value>
            <value>
                <fullName>Gov</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>TMO</fullName>
            </value>
            <value>
                <fullName>USCC</fullName>
            </value>
            <value>
                <fullName>Utility</fullName>
            </value>
            <value>
                <fullName>VZW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>