force-app/main/default/objects/Sensitive_Contact__c/fields/Contact_Category__c.field-meta.xml
<CustomField>
    <fullName>Contact_Category__c</fullName>
    <label>Contact Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Carrier</fullName>
            </value>
            <value>
                <fullName>Attorney</fullName>
            </value>
            <value>
                <fullName>Site Acq</fullName>
            </value>
            <value>
                <fullName>AE</fullName>
            </value>
            <value>
                <fullName>GC</fullName>
            </value>
            <value>
                <fullName>Harmoni</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>