force-app/main/default/objects/Sensitive_Contact__c/fields/Contact_Comment__c.field-meta.xml
<CustomField>
    <fullName>Contact_Comment__c</fullName>
    <label>Contact Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>