force-app/main/default/objects/Sensitive_Contact__c/fields/Contact_Comment_Recent__c.field-meta.xml
<CustomField>
    <fullName>Contact_Comment_Recent__c</fullName>
    <label>Contact Comment Recent</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>