force-app/main/default/objects/Sensitive_Contact__c/fields/Contact_Comments_History__c.field-meta.xml
<CustomField>
    <fullName>Contact_Comments_History__c</fullName>
    <label>Contact Comments History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>