force-app/main/default/objects/Sensitive_Contact__c/fields/Contact_Owner__c.field-meta.xml
<CustomField>
    <fullName>Contact_Owner__c</fullName>
    <label>Contact Owner</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abril Diaz</fullName>
            </value>
            <value>
                <fullName>Chas Peterson</fullName>
            </value>
            <value>
                <fullName>Daniel Campagna</fullName>
            </value>
            <value>
                <fullName>Heidi Nelson</fullName>
            </value>
            <value>
                <fullName>Jenine Renanud</fullName>
            </value>
            <value>
                <fullName>Mary Lou Boscardin</fullName>
            </value>
            <value>
                <fullName>Matthew Carroz</fullName>
            </value>
            <value>
                <fullName>Nathan Olson</fullName>
            </value>
            <value>
                <fullName>Ron Bittner</fullName>
            </value>
            <value>
                <fullName>Sara Bummer</fullName>
            </value>
            <value>
                <fullName>Sonny Peterman</fullName>
            </value>
            <value>
                <fullName>Yanni Macheras</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>