force-app/main/default/objects/Sensitive_Contact__c/fields/Display_Photo__c.field-meta.xml
<CustomField>
    <fullName>Display_Photo__c</fullName>
    <formula>IF(!ISBLANK(Photo_Link__c),
HYPERLINK(Photo_Link__c, IMAGE(Photo_Link__c, First_Name__c, -1, 400), &quot;_blank&quot;),
&quot;No photo uploaded for this contact.&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Display Photo</label>
    <type>Text</type>
</CustomField>