force-app/main/default/objects/Sensitive_Contact__c/fields/Engagement_Level__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Level__c</fullName>
    <label>Engagement Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Warm</fullName>
                <color>#FFFF66</color>
                <label>Warm</label>
            </value>
            <value>
                <fullName>Active</fullName>
                <color>#33CC00</color>
                <label>Active</label>
            </value>
            <value>
                <fullName>Cold</fullName>
                <color>#FF0000</color>
                <label>Cold</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>