force-app/main/default/objects/Sensitive_Contact__c/fields/LinkedIn_ID__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_ID__c</fullName>
    <label>LinkedIn ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>