force-app/main/default/objects/Sensitive_Contact__c/fields/Linkedin_Profile__c.field-meta.xml
<CustomField>
    <fullName>Linkedin_Profile__c</fullName>
    <formula>HYPERLINK(&quot;https://www.linkedin.com/in/&quot; + LinkedIn_ID__c, &quot;https://www.linkedin.com/in/&quot; + LinkedIn_ID__c, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Linkedin Profile</label>
    <type>Text</type>
</CustomField>