force-app/main/default/objects/Sensitive_Contact__c/fields/Reports_To__c.field-meta.xml
<CustomField>
    <fullName>Reports_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reports To</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Sensitive Contacts</relationshipLabel>
    <relationshipName>Sensitive_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>